# article-template2

./: .gitmodules  LICENSE  README.md
articles/hinagata/: CMakeLists.txt  Makefile.in  configure.ac  latexmkrc  main.tex
articles/hinagata/cmake/: FindLatexMk.cmake
